--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "dock-swarm",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "index.js",
+  "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node index.js"
   },
