--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "dock-swarm",
+  "name": "@redspirit/dock-swarm",
   "version": "0.1.0",
   "main": "index.js",
   "type": "module",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/redspirit/swarm.git"
+  },  
   "engines": {
     "node": ">=18.0.0"
   },
