--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@redspirit/dock-swarm",
+  "name": "dock-swarm",
   "version": "0.1.0",
   "main": "index.js",
   "type": "module",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/redspirit/swarm.git"
